--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@
           <div class="subheading mb-3">Optical Measurements: Interferometry, Spectroscopy: Photoluminescence (PL) and Raman Spectroscopy </div>
 
           <div class="subheading mb-3">Fabrication and Material Characterization: E-beam lithography, Sputtering and Deposition, SEM, AFM </div>
+          </div>
+      </section>
           
       </section>
 
@@ -161,10 +163,12 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="Publications">
         <div class="my-auto">
           <div class="subheading mb-3">Journal Publications</div>
+<li
 1. Arnob Islam, Wei Du, Vida Pashaei, Hao Jia, Zenghui Wang, Jaesung Lee, Guojun Ye,
 Xianhui Chen, Philip X.-L. Feng, “Discerning Black Phosphorus Crystal Orientation and
 Anisotropy by Polarized Reflectance Measurement”, ACS Appl. Mater. Interfaces, vol. 10, pp.
 25629-25637 (2018).
+</li>
 2. Arnob Islam, Jaesung Lee, Philip X.-L. Feng, “Atomic Layer GaSe/MoS2 van der Waals
 Heterostructure Photodiode with Low Noise and Large Dynamic Range”, ACS Photonics, vol.
 5, pp 2693–2700 (2018).
@@ -215,7 +219,8 @@ International Conference on Informatics, Electronics & Vision (ICIEV) 2013, 1-5,
 Habibur Rahaman, Araf Hossain, Rifat Al Nur, Ashfanur Kabir, Upal Mahbub: “Series active
 power filter implementation using P-Q theory”, Proc. 2012 International Conference on
 Informatics, Electronics & Vision (ICIEV) 2012, 915-918, 2012.
-        
+       </div>
+      </section> 
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
