--- a/index.html
+++ b/index.html
@@ -167,7 +167,9 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="Publications">
         <div class="my-auto">
+          <h2 class="mb-5">Publications</h2>
           <div class="subheading mb-3">Journal Publications</div>
+          <div></div>
 <div>1. Arnob Islam, Wei Du, Vida Pashaei, Hao Jia, Zenghui Wang, Jaesung Lee, Guojun Ye,
 Xianhui Chen, Philip X.-L. Feng, “Discerning Black Phosphorus Crystal Orientation and
 Anisotropy by Polarized Reflectance Measurement”, ACS Appl. Mater. Interfaces, vol. 10, pp.
@@ -194,8 +196,10 @@ Notices, vol. 2014, art. no. 627165, 2014.</div>
 <div>8. Arnob Islam, Samiha Ishrat Islam, Saiful Islam: “Designing an all epitaxial 1,550 nm intracavity
 VCSEL using GaInAsN/AlGaInAs in the active region and AlGaAsSb/AlAsSb in top
 and bottom DBRs”, Optical and Quantum Electronics, vol. 45, pp. 1199-1212, 2013.</div>
-
+   <div></div>
+      <div></div>
  <div class="subheading mb-3">Conference Publications</div>
+    <div></div>
 <div>1. Arnob Islam, Xia Liu, Bradley Odhner, Mary Anne Tupta, Philip X.-L Feng, “Investigation
 of Electrostatic Gating in Two-Dimensional Transitional Metal Dichalcogenide (TMDC) Field
 Effect Transistors (FETs)”, Proc. 2018 IEEE Nanomaterial Device Conference (NMDC),
