--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Publications</a>
+            <a class="nav-link js-scroll-trigger" href="#Publications">Publications</a>
           </li>
           
         </ul>
@@ -197,7 +197,7 @@ Notices, vol. 2014, art. no. 627165, 2014.</div>
 VCSEL using GaInAsN/AlGaInAs in the active region and AlGaAsSb/AlAsSb in top
 and bottom DBRs”, Optical and Quantum Electronics, vol. 45, pp. 1199-1212, 2013.</div>
    <div></div>
-      <div></div>
+   
  <div class="subheading mb-3">Conference Publications</div>
     <div></div>
 <div>1. Arnob Islam, Xia Liu, Bradley Odhner, Mary Anne Tupta, Philip X.-L Feng, “Investigation
