--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Arnob Islam</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Tampa.png" alt="">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,7 +67,7 @@
           <div class="subheading mb-5">2288 Murray Hill Rd., Cleveland, OH 44106 · (216) 702-8317 ·
             <a href="mailto:name@email.com">arnob.islam@case.edu</a>
           </div>
-          <p class="lead mb-5">I am currently a Ph.D. Student working on Two-dimensional (2D) nanoelectronics, 2D optoelectronics and 2D nanoelectromemechanical system.</p>
+          <p class="lead mb-5">I am currently a Ph.D. candidate working on two-dimensional (2D) nanoelectronics, 2D optoelectronics and 2D nanoelectromemechanical system.</p>
           <div class="social-icons">
             <a href="#">
               <i class="fab fa-linkedin-in"></i>
